--- a/Gclaim_desktop/nbproject/private/private.properties
+++ b/Gclaim_desktop/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\azizk\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\elyes\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
