--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -29,47 +29,48 @@ dist.jar=${dist.dir}/Gclaim_desktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.activation-1.1.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\activation-1.1.jar
-file.reference.commons-codec-1.10.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\commons-codec-1.10.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\commons-logging-1.2.jar
-file.reference.controlsfx-8.40.11.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\controlsfx-8.40.11.jar
+file.reference.activation-1.1.jar=C:\\Users\\souma\\Desktop\\JAR\\activation-1.1.jar
+file.reference.commons-codec-1.10.jar=C:\\Users\\souma\\Desktop\\JAR\\commons-codec-1.10.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\souma\\Desktop\\JAR\\commons-logging-1.2.jar
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\souma\\Desktop\\JAR\\controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-8=C:\\Users\\souma\\Desktop\\controlsfx-8.40.11.jar
-file.reference.guava-18.0.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\guava-18.0.jar
-file.reference.httpclient-4.5.6.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\httpclient-4.5.6.jar
-file.reference.httpcore-4.4.10.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\httpcore-4.4.10.jar
+file.reference.core-3.4.1-javadoc.jar=C:\\Users\\souma\\Desktop\\bibout\\core-3.4.1-javadoc.jar
+file.reference.core-3.4.1.jar=C:\\Users\\souma\\Desktop\\bibout\\core-3.4.1.jar
+file.reference.guava-18.0.jar=C:\\Users\\souma\\Desktop\\JAR\\guava-18.0.jar
+file.reference.httpclient-4.5.6.jar=C:\\Users\\souma\\Desktop\\JAR\\httpclient-4.5.6.jar
+file.reference.httpcore-4.4.10.jar=C:\\Users\\souma\\Desktop\\JAR\\httpcore-4.4.10.jar
 file.reference.itextpdf-5.1.0.jar=C:\\Users\\souma\\Desktop\\itextpdf-5.1.0.jar
-file.reference.itextpdf-5.1.0.jar-1=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\itextpdf-5.1.0.jar
-file.reference.jackson-annotations-2.9.8.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\jackson-annotations-2.9.8.jar
-file.reference.jackson-core-2.9.8.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\jackson-core-2.9.8.jar
-file.reference.jackson-databind-2.9.8.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\jackson-databind-2.9.8.jar
-file.reference.Java-WebSocket-1.3.8.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\Java-WebSocket-1.3.8.jar
+file.reference.itextpdf-5.1.0.jar-1=C:\\Users\\souma\\Desktop\\JAR\\itextpdf-5.1.0.jar
+file.reference.jackson-annotations-2.9.8.jar=C:\\Users\\souma\\Desktop\\JAR\\jackson-annotations-2.9.8.jar
+file.reference.jackson-core-2.9.8.jar=C:\\Users\\souma\\Desktop\\JAR\\jackson-core-2.9.8.jar
+file.reference.jackson-databind-2.9.8.jar=C:\\Users\\souma\\Desktop\\JAR\\jackson-databind-2.9.8.jar
+file.reference.Java-WebSocket-1.3.8.jar=C:\\Users\\souma\\Desktop\\JAR\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-8=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
-file.reference.javax.mail-1.6.1.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\javax.mail-1.6.1.jar
+file.reference.javax.mail-1.6.1.jar=C:\\Users\\souma\\Desktop\\JAR\\javax.mail-1.6.1.jar
 file.reference.javax.mail-1.6.1.jar-1=C:\\Users\\souma\\Desktop\\javax.mail-1.6.1.jar
-file.reference.jaxb-api-2.2.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\jaxb-api-2.2.jar
-file.reference.jjwt-0.4.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\jjwt-0.4.jar
-file.reference.joda-time-2.5.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\joda-time-2.5.jar
-file.reference.json-simple-1.1.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\json-simple-1.1.jar
+file.reference.jaxb-api-2.2.jar=C:\\Users\\souma\\Desktop\\JAR\\jaxb-api-2.2.jar
+file.reference.jjwt-0.4.jar=C:\\Users\\souma\\Desktop\\JAR\\jjwt-0.4.jar
+file.reference.joda-time-2.5.jar=C:\\Users\\souma\\Desktop\\JAR\\joda-time-2.5.jar
+file.reference.json-simple-1.1.jar=C:\\Users\\souma\\Desktop\\JAR\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-8=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 file.reference.poi-3.13.jar=C:\\Users\\souma\\Desktop\\poi-3.13.jar
-file.reference.poi-3.13.jar-1=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\poi-3.13.jar
+file.reference.poi-3.13.jar-1=C:\\Users\\souma\\Desktop\\JAR\\poi-3.13.jar
 file.reference.poi-ooxml-3.13.jar=C:\\Users\\souma\\Desktop\\poi-ooxml-3.13.jar
-file.reference.poi-ooxml-3.13.jar-1=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\poi-ooxml-3.13.jar
+file.reference.poi-ooxml-3.13.jar-1=C:\\Users\\souma\\Desktop\\JAR\\poi-ooxml-3.13.jar
 file.reference.poi-ooxml-schemas-3.13.jar=C:\\Users\\souma\\Desktop\\poi-ooxml-schemas-3.13.jar
-file.reference.poi-ooxml-schemas-3.13.jar-1=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\poi-ooxml-schemas-3.13.jar
-file.reference.simplecaptcha-1.2.1.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\simplecaptcha-1.2.1.jar
-file.reference.slf4j-api-1.7.6.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\slf4j-api-1.7.6.jar
-file.reference.stax-api-1.0-2.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\stax-api-1.0-2.jar
-file.reference.twilio-7.36.1.jar=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\twilio-7.36.1.jar
+file.reference.poi-ooxml-schemas-3.13.jar-1=C:\\Users\\souma\\Desktop\\JAR\\poi-ooxml-schemas-3.13.jar
+file.reference.simplecaptcha-1.2.1.jar=C:\\Users\\souma\\Desktop\\JAR\\simplecaptcha-1.2.1.jar
+file.reference.slf4j-api-1.7.6.jar=C:\\Users\\souma\\Desktop\\JAR\\slf4j-api-1.7.6.jar
+file.reference.stax-api-1.0-2.jar=C:\\Users\\souma\\Desktop\\JAR\\stax-api-1.0-2.jar
+file.reference.twilio-7.36.1.jar=C:\\Users\\souma\\Desktop\\JAR\\twilio-7.36.1.jar
 file.reference.xmlbeans-2.6.0.jar=C:\\Users\\souma\\Desktop\\xmlbeans-2.6.0.jar
-file.reference.xmlbeans-2.6.0.jar-1=C:\\Users\\elyes\\Downloads\\JAR-20220428T202307Z-001\\JAR\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-1=C:\\Users\\souma\\Desktop\\JAR\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${libs.zxing.classpath}:\
     ${file.reference.Java-WebSocket-1.3.8.jar}:\
     ${file.reference.activation-1.1.jar}:\
     ${file.reference.commons-codec-1.10.jar}:\
@@ -94,7 +95,9 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.7.6.jar}:\
     ${file.reference.stax-api-1.0-2.jar}:\
     ${file.reference.twilio-7.36.1.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar-1}
+    ${file.reference.xmlbeans-2.6.0.jar-1}:\
+    ${file.reference.core-3.4.1-javadoc.jar}:\
+    ${file.reference.core-3.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
